--- a/WordPress/richCommentTemplate.html
+++ b/WordPress/richCommentTemplate.html
@@ -1,176 +1,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=available-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <style>
-        :root {
-            /* informs WebKit that this template supports both appearance modes. */
-            color-scheme: light dark;
-
-            /* custom variables. */
-            --wordpress-blue-color: rgba(6, 117, 196, 1);
-            --mention-background-color: rgba(2, 103, 255, .1);
-            --monospace-font: ui-monospace, monospace;
-        }
-
-        /* overrides for dark color scheme. */
-        @media(prefers-color-scheme: dark) {
-            :root {
-                --wordpress-blue-color: rgba(57, 156, 227, 1);
-                --mention-background-color: rgba(2, 103, 255, .15);
-            }
-        }
-
-        /* disable WebKit text inflation algorithm to prevent text size increase on orientation change. */
-        html {
-            -webkit-text-size-adjust: none;
-        }
-
-        /* use Apple's standard style to match the native look. */
-        body {
-            font: -apple-system-body;
-            color: -apple-system-label;
-            background-color: -apple-system-background;
-        }
-
-        /* get rid of the container default margins and paddings. */
-        html, body {
-            margin: 0;
-            padding: 0;
-        }
-
-        /* remove the bottom margin of ANY element that's placed last within the <body> tag. */
-        body :last-child {
-            margin-bottom: 0;
-        }
-
-        p {
-            word-wrap: break-word;
-        }
-
-        /* remove the default left/right margin for figures, as some elements (tables, images) are often embedded in <figure>. */
-        figure {
-            margin: 0
-        }
-
-        /** LINKS **/
-
-        a {
-            color: var(--wordpress-blue-color);
-        }
-
-        a.mention {
-            text-decoration: none;
-            background-color: var(--mention-background-color);
-            padding: 0 3px;
-            -webkit-border-radius: 3pt;
-        }
-
-        /** IMAGES **/
-
-        .wp-block-image img {
-            display: block;
-            margin: 0 auto; /* align center */
-            width: auto;
-            max-width: 100vw;
-            -webkit-border-radius: 3pt;
-        }
-
-        figcaption {
-            font: -apple-system-caption1;
-            color: -apple-system-secondary-label;
-            text-align: center;
-        }
-
-        /* set custom emoji images to be match current font size, and align it to the text baseline. */
-        img.emoji {
-            vertical-align: baseline;
-            max-width: 1rem;
-        }
-
-        /** BLOCKQUOTES **/
-
-        blockquote {
-            font-size: 1rem;
-            margin: auto 0;
-            padding: 10pt;
-            background-color: -apple-system-secondary-background;
-            -webkit-border-radius: 3pt;
-        }
-
-        blockquote > p:first-child {
-            margin-top: 0;
-            padding-top: 0;
-        }
-
-        blockquote cite {
-            display: block;
-            font: -apple-system-footnote;
-            text-align: right;
-        }
-
-        blockquote cite::before {
-            content: "— ";
-        }
-
-        /** CODE SNIPPETS **/
-
-        code,
-        pre {
-            font-family: var(--monospace-font);
-            font-size: 0.85rem;
-            -webkit-border-radius: 3pt;
-            background-color: -apple-system-secondary-background;
-        }
-
-        code {
-            padding: 0 3pt;
-        }
-
-        pre {
-            padding: 10pt;
-            padding-right: 5pt;
-            white-space: pre-wrap;
-            word-wrap: break-word;
-        }
-
-        /** TABLES **/
-
-        table {
-            min-width: 100vw;
-            margin: auto 0;
-            padding: 0;
-            overflow-x: scroll;
-            border-collapse: collapse;
-        }
-
-        table, tr, td {
-            border: 1px solid -apple-system-separator;
-        }
-
-        td {
-            padding: 6pt;
-            vertical-align: top;
-        }
-
-        /** VIDEOS **/
-
-        video {
-            width: 100vw;
-            height: auto;
-        }
-
-        /** BLOCK OVERRIDES **/
-
-        /* override hardcoded background color to system default. */
-        .has-background {
-            background-color: -apple-system-background !important;
-        }
-
-        /* forcefully remove gaps from custom vertical spacers. */
-        .wp-block-spacer {
-            height: 0px !important;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="richCommentStyle.css">
 </head>
 <body>
     %@
