--- a/WordPress/Resources/HTML/richCommentTemplate.html
+++ b/WordPress/Resources/HTML/richCommentTemplate.html
@@ -1,4 +1,4 @@
-<html>
+<html dir="auto">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=NO" />
     <link rel="stylesheet" type="text/css" href="richCommentStyle.css">
